--- a/rolebinding-app.yaml
+++ b/rolebinding-app.yaml
@@ -6,16 +6,13 @@ metadata:
   creationTimestamp: "2024-02-01T16:00:02Z"
   labels:
     kubernetes.io/bootstrapping: rbac-defaults
-  name: system::leader-locking-kube-controller-manager
+  name: system:controller:token-cleaner
   namespace: kube-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: system::leader-locking-kube-controller-manager
+  name: system:controller:token-cleaner
 subjects:
-- apiGroup: rbac.authorization.k8s.io
-  kind: User
-  name: system:kube-controller-manager
 - kind: ServiceAccount
-  name: kube-controller-manager
+  name: token-cleaner
   namespace: kube-system
