--- a/namespace-app.yaml
+++ b/namespace-app.yaml
@@ -3,11 +3,11 @@ kind: Namespace
 metadata:
   annotations:
     kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"name":"testing"}}
-  creationTimestamp: "2024-02-12T12:42:41Z"
+      {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"name":"klum"}}
+  creationTimestamp: "2024-02-18T19:05:04Z"
   labels:
-    kubernetes.io/metadata.name: testing
-  name: testing
+    kubernetes.io/metadata.name: klum
+  name: klum
 spec:
   finalizers:
   - kubernetes
