--- a/clusterrole-app.yaml
+++ b/clusterrole-app.yaml
@@ -2,17 +2,19 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   annotations:
-    rbac.authorization.kubernetes.io/autoupdate: "true"
-  creationTimestamp: "2024-02-01T16:00:01Z"
+    kubectl.kubernetes.io/last-applied-configuration: |
+      {"apiVersion":"rbac.authorization.k8s.io/v1","kind":"ClusterRole","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"kube-rbac-proxy","app.kubernetes.io/created-by":"cerebrum","app.kubernetes.io/instance":"metrics-reader","app.kubernetes.io/managed-by":"kustomize","app.kubernetes.io/name":"clusterrole","app.kubernetes.io/part-of":"cerebrum"},"name":"cerebrum-metrics-reader"},"rules":[{"nonResourceURLs":["/metrics"],"verbs":["get"]}]}
+  creationTimestamp: "2024-02-12T11:59:01Z"
   labels:
-    kubernetes.io/bootstrapping: rbac-defaults
-  name: system:certificates.k8s.io:kube-apiserver-client-approver
+    app.kubernetes.io/component: kube-rbac-proxy
+    app.kubernetes.io/created-by: cerebrum
+    app.kubernetes.io/instance: metrics-reader
+    app.kubernetes.io/managed-by: kustomize
+    app.kubernetes.io/name: clusterrole
+    app.kubernetes.io/part-of: cerebrum
+  name: cerebrum-metrics-reader
 rules:
-- apiGroups:
-  - certificates.k8s.io
-  resourceNames:
-  - kubernetes.io/kube-apiserver-client
-  resources:
-  - signers
+- nonResourceURLs:
+  - /metrics
   verbs:
-  - approve
+  - get
